--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,9 @@
   will-change: filter;
   transition: filter 300ms;
 }
+.filters li button.selected {
+  border: 1px solid black !important;
+}
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
